@@ -6,6 +6,7 @@ include_stylesheet=["UI/setup/stylesheet.css"] ?>
 <h2><?lsmb text('Database Management Console') ?></h2>
 <div class="listtop"><?lsmb text('Confirm Operation') ?></div>
 <?lsmb # notice, message, and operation are all localized. ?>
+<div id="username"><?lsmb text('Logged in as') ?> <?lsmb login_name ?></div>
 <div id="notice"><?lsmb notice ?></div>
 <div id="message"><?lsmb message ?></div>
 <div id="operation"><?lsmb operation ?></div>
